frontend/src/components/QuickFilters/FilterRenderers/Checkbox/Checkbox.styles.scss
.checkbox-filter {
	display: flex;
	flex-direction: column;
	padding: 12px;
	gap: 12px;
	border-bottom: 1px solid var(--l1-border);

	.search {
		input {
			--input-background: var(--l2-background);
			--input-hover-background: var(--l2-background);
			--input-focus-background: var(--l2-background);
			&::placeholder {
				color: var(--l3-foreground);
			}
			--input-font-size: 14px;
			--input-border-color: var(--l1-border);
			--input-focus-border-color: var(--primary-background);
			--input-focus-outline-width: 0;
			--input-focus-outline-offset: 0;
		}
	}

	.filter-header-checkbox {
		display: flex;
		align-items: center;
		justify-content: space-between;
		cursor: pointer;

		.left-action {
			display: flex;
			align-items: center;
			gap: 6px;

			.title {
				color: var(--l2-foreground);
				font-family: Inter;
				font-size: 14px;
				font-style: normal;
				font-weight: 400;
				line-height: 18px;
				letter-spacing: -0.07px;
				text-transform: capitalize;
			}
		}

		.right-action {
			display: flex;
			align-items: center;
			min-width: 48px;

			.clear-all {
				font-size: 12px;
				color: var(--accent-primary);
				cursor: pointer;
			}
		}
	}

	.values {
		display: flex;
		flex-direction: column;
		gap: 8px;

		.filter-separator {
			height: 1px;
			background-color: var(--l1-border);
			margin: 4px 0;
		}

		.value {
			display: flex;
			align-items: center;
			gap: 8px;
			min-height: 24px;

			.checkbox-value-section {
				display: flex;
				align-items: center;
				gap: 4px;
				width: calc(100% - 24px);
				cursor: pointer;

				.value-string {
					width: 100%;
				}

				&.filter-disabled {
					cursor: not-allowed;

					.value-string {
						color: var(--l3-foreground);
					}

					.only-btn {
						cursor: not-allowed;
						color: var(--l3-foreground);
					}

					.toggle-btn {
						cursor: not-allowed;
						color: var(--l3-foreground);
					}
				}

				.only-btn {
					display: none;
				}
				.toggle-btn {
					display: none;
				}

				.toggle-btn:hover {
					background-color: unset;
				}

				.only-btn:hover {
					background-color: unset;
				}
			}

			.checkbox-value-section:hover {
				.toggle-btn {
					display: none;
				}
				.only-btn {
					display: flex;
					align-items: center;
					justify-content: center;
					height: 21px;
				}
			}
		}

		.value:hover {
			.toggle-btn {
				display: flex;
				align-items: center;
				justify-content: center;
				height: 21px;
			}
		}
	}

	.no-data {
		align-self: center;
	}

	.show-more {
		display: flex;
		align-items: center;
		justify-content: center;

		.show-more-text {
			color: var(--accent-primary);
			cursor: pointer;
		}
	}
	.go-to-docs {
		display: flex;
		flex-direction: column;
		gap: 44px;
		&__container {
			display: flex;
			flex-direction: column;
			gap: 4px;
			margin-top: 4px;

			&-message {
				color: var(--l2-foreground);
				font-size: 14px;
				line-height: 20px; /* 142.857% */
				letter-spacing: -0.07px;
			}
		}
		&__button {
			display: flex;
			align-items: center;
			gap: 4px;
			cursor: pointer;
			margin: 0 0 4px;
			padding: 0;
			&-text {
				color: var(--bg-robin-400);
				font-family: Inter;
				font-size: 14px;
				line-height: 20px; /* 142.857% */
				letter-spacing: -0.07px;
			}
		}
	}
}

.label-false {
	width: 2px;
	height: 11px;
	border-radius: 2px;
	background: var(--danger-background);
}

.label-true {
	width: 2px;
	height: 11px;
	border-radius: 2px;
	background: var(--bg-forest-500);
}

